comandos agregados en read me