@@ -1,1 +1,7 @@
 # proyecto-simulacion
+
+comandos para ejecutar en consola:
+
+javac --module-path "javafx-sdk-21.0.7/lib" --add-modules javafx.controls,javafx.fxml AutoSimuladorGUI.java
+
+java --module-path "javafx-sdk-21.0.7/lib" --add-modules javafx.controls,javafx.fxml AutoSimuladorGUI
